apps/factorio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorio-server
  namespace: factorio
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: factorio
  ports:
    - name: game
      port: 34197
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: factorio-makoto-server
  namespace: factorio
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: factorio-makoto
  ports:
    - name: game
      port: 34198
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: factorio-challenge-server
  namespace: factorio
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: factorio-challenge
  ports:
    - name: game
      port: 34199
      protocol: UDP
