apps/factorio/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: factorio
  namespace: factorio
spec:
  endpointSelector:
    matchLabels:
      app: factorio
  ingress:
    # vmagent scrapes the GameOps toolkit's /metrics (SPEC/monitoring-stack.md).
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports: [{ port: "9110", protocol: TCP }]
    - fromEntities: [world, remote-node]
      toPorts:
        - ports: [{ port: "34197", protocol: UDP }]
    - fromEndpoints:
        - matchLabels:
            app: playit
            k8s:io.kubernetes.pod.namespace: playit
      toPorts:
        - ports: [{ port: "34197", protocol: UDP }]
  egress:
    - toEntities: [world]
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: factorio-makoto
  namespace: factorio
spec:
  endpointSelector:
    matchLabels:
      app: factorio-makoto
  ingress:
    # vmagent scrapes the GameOps toolkit's /metrics (SPEC/monitoring-stack.md).
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports: [{ port: "9110", protocol: TCP }]
    - fromEntities: [world, remote-node]
      toPorts:
        - ports: [{ port: "34198", protocol: UDP }]
    - fromEndpoints:
        - matchLabels:
            app: playit
            k8s:io.kubernetes.pod.namespace: playit
      toPorts:
        - ports: [{ port: "34198", protocol: UDP }]
  egress:
    - toEntities: [world]
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: factorio-challenge
  namespace: factorio
spec:
  endpointSelector:
    matchLabels:
      app: factorio-challenge
  ingress:
    # vmagent scrapes the GameOps toolkit's /metrics (SPEC/monitoring-stack.md).
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports: [{ port: "9110", protocol: TCP }]
    - fromEntities: [world, remote-node]
      toPorts:
        - ports: [{ port: "34199", protocol: UDP }]
    - fromEndpoints:
        - matchLabels:
            app: playit
            k8s:io.kubernetes.pod.namespace: playit
      toPorts:
        - ports: [{ port: "34199", protocol: UDP }]
  egress:
    - toEntities: [world]
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
