apps/factorio/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: factorio
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 34197
          protocol: UDP
    - from:
        - namespaceSelector: {}
      ports:
        - port: 27015
          protocol: TCP
